--- a/.prettierrc
+++ b/.prettierrc
@@ -3,7 +3,7 @@
   "semi": true,
   "singleQuote": true,
   "jsxSingleQuote": true,
-  "tabWidth": 2,
+  "useTabs": false,
   "trailingComma": "es5",
   "printWidth": 100,
   "arrowParens": "always"
