--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "codica",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://afsonk.github.io/test-assignment/",
+  "homepage": "https://afsonk.github.io/",
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
